# Script-Hook-Universal

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: build.yml
docs/: docs.md
src/: common.hpp  main.cpp
